--- a/src/main/resources/datasource.yml
+++ b/src/main/resources/datasource.yml
@@ -1,12 +1,13 @@
 spring:
   datasource:
-    type: com.zaxxer.hikari.HikariDataSource
-    driver-class-name: org.postgresql.Driver
-    url: jdbc:postgresql://localhost:5432/rest_test
-    username: postgres
-    password: postgres
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/rest_test?useSSL=false&serverTimezone=UTC
+    username: root
+    password: root
   jpa:
-    database: postgresql
-    show-sql: true
     hibernate:
       ddl-auto: update
+    show-sql: true
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MySQL8Dialect
