测试新增代码

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,5 +8,13 @@ spring:
     import:
       - classpath:datasource.yml
   aop:
-    auto: true
+    auto: false
     proxy-target-class: true
+  cache:
+    jcache:
+      enabled: false
+
+logging:
+  level:
+    com:
+      example: DEBUG
