--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,6 +4,7 @@ spring:
   data:
     rest:
       basePath: /api
-  config:
-    import:
-      - classpath:datasource.yml
+  profiles:
+    active: igs
+
+
